--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tester</title>
+      <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/character.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/slider.css">
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/slider.css">
     <link rel="stylesheet" href="./assets/css/content.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="../w3_band/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <div id="main">
@@ -44,6 +45,9 @@
             <!-- NaSearch -->
             <div id="navSearch">
                 <i class="ti-search tinav-search"></i>
+            </div>
+            <div class="mobile-search">
+                <i class="ti-menu tinavmb-menu"></i>
             </div>
             <!-- End NavSearch -->
         </div>
