--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tester</title>
-      <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/infodev.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/character.css">
-  <link rel="stylesheet" href="./assets/css/slider.css">
+    <link rel="stylesheet" href="./assets/css/slider.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/content.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
@@ -15,6 +16,11 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
+    <!-- info dev -->
+    <div id="info-dev">
+
+    </div>
+    <!-- end info dev -->
     <div id="main">
         <!-- header -->
        
@@ -46,7 +52,7 @@
             <div id="navSearch">
                 <i class="ti-search tinav-search"></i>
             </div>
-            <div class="mobile-search">
+            <div id="mobile-search" class="mobile-search">
                 <i class="ti-menu tinavmb-menu"></i>
             </div>
             <!-- End NavSearch -->
@@ -152,6 +158,6 @@ In seasons 1-2, she lives with her Earth hosts, the Diaz family. In season 3, sh
 
         </div>
     </div>
-    
+    <script src="./assets/Js/mobile.js"></script>
 </body>
 </html>
