--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <div id="footer">
+            <h3>Made by LeTDuG</h3>
+        </div>
     </div>
 </body>
 </html>
