--- a/index.html
+++ b/index.html
@@ -108,7 +108,96 @@
                 </div>
             </div>
         </div>
+        <div id="test5">
+            <div class="form">
+                <h3 class="form__header">
+                    Get in touch with us by filling contact form below
+                </h3>
+                <div class="form__name">
+                    <div class="form__name-main">
+                        <input type="text" class="form__name-full-name" placeholder="Enter your full name"
+                    title="Name just use text, e.g Le The Dung"
+                    pattern="[a-z]"
+                    >
+                    <input type="text" class="form__name-email"
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                    placeholder="Enter your email"
+                    >
+                    </div>
+                </div>
+                <input type="text" placeholder="Enter your subject" class="form__subject">
+                <input type="text" placeholder="Your message hare" class="form__message">
+                <div class="form__send">
+                    <button class="form__send-button">Send mesage</button>
+                    <p class="form__send-note">Please fill all required form field, thanks!</p>
+                </div>
+            
+            </div>
+        </div>
 
+        <!-- test 6 -->
+        <div class="test6">
+            <div class="test6__container">
+                <div class="test6__container-img">
+                    <img src="https://images7.alphacoders.com/101/thumbbig-1018616.webp" alt="" class="container-img-main">
+                </div>
+                <div class="test6__container-content">
+                    <h2 class="container-content__header">
+                        ABOUT US
+                    </h2>
+                    <p class="container-content__sub-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit, sed do eiusmod tempor incididunt ut labore et 
+                        dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                        ea commodo consequat. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.
+                    </p>
+                    <h3 class="container-content__sub-header">
+                        Why Choose Us?
+                    </h3>
+                    <div class="container-content__main">
+                        <ul class="content__main-list">
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Lorem ipsum dolor
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Tempor incididunt
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Loremipsum dolor
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Incididunt ut labore
+                            </li>
+                        </ul>
+                        <ul class="content__main-list">
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Aliquip ex ea commodo
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Lorem ipsum dolor
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Exercitation ullamco
+                            </li>
+                            <li class="content__main-list-item">
+                                <i class="fas fa-check main-list-item__icon"></i>
+                                Lorem ipsum dolor
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
         <div id="footer">
             <h3>Made by LeTDuG</h3>
