--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     </div>
                     <div class="nav-second__main">
                         <a href="#home" class="nav-second__main-link">Home</a>
-                        <a href="#" class="nav-second__main-link">About</a>
-                        <a href="#" class="nav-second__main-link">My Class</a>
-                        <a href="#" class="nav-second__main-link">News</a>
-                        <a href="#" class="nav-second__main-link">Contact</a>
+                        <a href="#about" class="nav-second__main-link">About</a>
+                        <a href="#class" class="nav-second__main-link">My Class</a>
+                        <a href="#Member" class="nav-second__main-link">Member</a>
+                        <a href="#news" class="nav-second__main-link">News</a>
                         <button class="nav-second__main-login main--btn">Login</button>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
         <!-- Content -->
         <div class="content">
             <!-- About Me -->
-            <div class="content__about-container">
+            <div class="content__about-container" id="about">
                 <div class="content__about">
                     <div class="about__text main--text-shadown">
                         <p class="about__text-first">I'm Dũng Welcome To My Demo Web</p>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <!-- My Class -->
-            <div class="content__class-container">
+            <div class="content__class-container" id="class">
                 <div class="content__class">
                     <div class="content__class-info main--box-zoom">
                         <h1 class="content__class-heading">
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <!-- Member -->
-            <div class="content__member-container">
+            <div class="content__member-container" id="Member">
                 <div class="content__member">
                     <div class="content__member-heading main--box-zoom">
                         <h1 class="content__member-text-heading">
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <!-- News -->
-            <div class="content__news-container">
+            <div class="content__news-container" id="news">
                 <div class="content__news">
                     <div class="content__news-heading">
                         <h1 class="content__news-heading-main">
