--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     <div class="nav-second__main"
                     id="js--nav-second__main">
                         <a href="#home" class="nav-second__main-link">Home</a>
-                        <a href="#" class="nav-second__main-link">About Me</a>
-                        <a href="#" class="nav-second__main-link">My Class</a>
-                        <a href="#" class="nav-second__main-link">News</a>
-                        <a href="#" class="nav-second__main-link">Contact</a>
+                        <a href="#about" class="nav-second__main-link">About Me</a>
+                        <a href="#class" class="nav-second__main-link">My Class</a>
+                        <a href="#member" class="nav-second__main-link">Member</a>
+                        <a href="#news" class="nav-second__main-link">News</a>
                         <button class="nav-second__main-login main--btn">Login</button>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
         <div class="content">
             <!-- About Me -->
             <div class="content__about-container">
-                <div class="content__about">
+                <div class="content__about" id="about">
                   
                     <div class="content__about-text-add">
                         <div class="about__text main--text-shadown">
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <!-- My Class -->
-            <div class="content__class-container">
+            <div class="content__class-container" id="class">
                 <div class="content__class">
                     <div class="content__class-info main--box-zoom">
                         <h1 class="content__class-heading">
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <!-- Member -->
-            <div class="content__member-container">
+            <div class="content__member-container" id="member">
                 <div class="content__member">
                     <div class="content__member-heading main--box-zoom">
                         <h1 class="content__member-text-heading">
@@ -221,7 +221,7 @@
                             Latest News
                         </h1>
                     </div>
-                    <div class="content__news-main">
+                    <div class="content__news-main" id="news">
                         <ul class="content__news-main-list">
                             <li class="content__news-main-item main--box-move-up">
                                 <div class="news__main-item-bgr">
