--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                         </div>
                     </div>
                     <div class="about__Info">
-                        <div class="about__Info-form main--border-box main--text-shadown main--box-move-up ">
+                        <div class="about__Info-form 
+                                    
+                                     main--box-move-up ">
                             <a href="" class="about__Info-link">
                                 <i class="fab fa-facebook-messenger about--logo about--messenger"></i>
                                 <h4 class="about__Info-form-content">
@@ -103,7 +105,7 @@
                                 </h4>
                             </a>
                         </div>
-                        <div class="about__Info-form main--border-box main--text-shadown main--box-move-up">
+                        <div class="about__Info-form main--border-box  main--box-move-up">
                             <a href="" class="about__Info-link">
                                 <i class="fab fa-instagram about--logo about--instagram"></i>
                                 <h4 class="about__Info-form-content ">
@@ -111,7 +113,7 @@
                                 </h4>
                             </a>
                         </div>
-                        <div class="about__Info-form main--border-box main--text-shadown main--box-move-up">
+                        <div class="about__Info-form main--border-box  main--box-move-up">
                             <a href="" class="about__Info-link">
                                 <i class="fab fa-facebook about--logo about--facebook"></i>
                                 <h4 class="about__Info-form-content">
@@ -137,7 +139,7 @@
                         </button>
                     </div>
                     <div class="content__class-img main--box-zoom">
-                        <img src="./assets/img/Class/ClassMainImg.JPG" alt="This my class" class="content__class-main-img main--border-box">
+                        <img src="./assets/img/Class/ClassMainImg.JPG" alt="This my class" class="content__class-main-img">
                     </div>
                 </div>
             </div>
