--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="about__Info">
                         <div class="about__Info-form 
-                                    
+                                     main--border-box
                                      main--box-move-up ">
                             <a href="" class="about__Info-link">
                                 <i class="fab fa-facebook-messenger about--logo about--messenger"></i>
