--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="header__nav-menu">
-                       <button onclick="openMenu()" class="header__nav-menu-button">
+                       <button class="header__nav-menu-button js-header__nav-menu-button">
                            <i class="fas fa-bars nav--menu"></i>
                        </button>
                     </div>
