--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <div class="form">
             <div class="text"></div>
             <label for="#text">Câu trả lời của cậu:</label>
+            <span class="noti-form2"></span>
             <div class="form2">
               <input type="text" id="text" class="input-text" name="txt" />
               <button class="submit">Submit</button>
