--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
        
 
 
-
+/* code js copy hơi lèo nhèo chút, bản demo nên chưa vứt code ra*/
     </div>
     <script src="./assets/app.js"></script>
   </body>
