--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -62,6 +62,7 @@
               CEO và chủ tịch của công ty công nghệ đa quốc gia Amazon.
               Wikipedia
             </p>
+            <p style="color: rgb(255, 188, 62); font-style: italic; ">Truy cập bằng Pc để có trải nghiệm tốt nhất</p>
           </div>
           <div class="home-mail opc-hidden">
             <span>corepper03@gmail.com</span>
