--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -62,7 +62,9 @@
               CEO và chủ tịch của công ty công nghệ đa quốc gia Amazon.
               Wikipedia
             </p>
-            <p style="color: rgb(255, 188, 62); font-style: italic; ">Truy cập bằng Pc để có trải nghiệm tốt nhất</p>
+            <p style="color: rgb(255, 188, 62); font-style: italic">
+              Truy cập bằng Pc để có trải nghiệm tốt nhất
+            </p>
           </div>
           <div class="home-mail opc-hidden">
             <span>corepper03@gmail.com</span>
@@ -119,6 +121,33 @@
           </div>
           <div class="resume-content">
             <h1>coming Soon</h1>
+          </div>
+        </div>
+        <div class="playlists add--trans opc-hidden">
+          <div class="resume-title">
+            <i class="fas fa-music header--logo"></i><span>Playlist</span>
+          </div>
+          <div class="play-container">
+            <div class="play">
+              <div class="play-slider">
+                <div class="play-color"></div>
+              </div>
+              <div class="play-header">
+                <p>Name Song</p>
+              </div>
+              <div class="play-controls">
+                <i class="fas fa-fast-backward play--icon back--song"></i>
+                <i class="fas fa-play play--icon start"></i>
+                <i class="fas fa-pause pause--icon"></i>
+                <i class="fas fa-fast-forward play--icon next--song"></i>
+              </div>
+            </div>
+            <div class="play-list"></div>
+          </div>
+        </div>
+        <div class="audio-container">
+          <!-- <audio src="./assets/audio/yeuxa.mp3" data-number="0"></audio>
+          <audio src="./assets/audio/henmotmai.mp3" data-number="0"></audio> -->
         </div>
       </div>
     </div>
