--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -19,135 +19,49 @@
   </head>
   <body>
     <div id="main">
-      <div class="header">
-        <div class="header-logo header--active">
-          <i class="fas fa-home header--logo"></i>
-          <span>Home</span>
-        </div>
-        <div class="header-logo">
-          <i class="fas fa-skull header--logo"></i>
-          <span>Skills</span>
-        </div>
-        <div class="header-logo">
-          <i class="fas fa-list-ul header--logo"></i>
-          <span>More</span>
-        </div>
-        <div class="header-more">
-          <div class="more-content">
-            <div class="add--more">
-              <i class="fas fa-random header--logo"></i>
-              <span>Resume</span>
+      <div class="main js--main-play">
+        <div class="content-main">
+          <div class="content-info content--sub">
+            <div class="content-main-header">
+              <h1></h1>
+              <div class="stick"></div>
             </div>
-            <div class="add--more">
-              <i class="fas fa-music header--logo"></i>
-              <span>Playlist</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="home add--trans">
-          <div class="home-img opc-hidden">
-            <img src="./assets/imgs/image.jpg" alt="" />
-            <div class="home-slider"></div>
-          </div>
-          <div class="home-heading opc-hidden">
-            <h1 class="home-heading-text">Hi there,</h1>
-            <span>I'm a student, i don't stand out</span>
-          </div>
-          <div class="home-content opc-hidden">
-            <p>
-              Tôi là doanh nhân, nhà tư bản công nghiệp, chủ sở hữu truyền thông
-              và nhà đầu tư người Mỹ. Tôi được biết đến như là người sáng lập,
-              CEO và chủ tịch của công ty công nghệ đa quốc gia Amazon.
-              Wikipedia
-            </p>
-            <p style="color: rgb(255, 188, 62); font-style: italic">
-              Truy cập bằng Pc để có trải nghiệm tốt nhất
-            </p>
-          </div>
-          <div class="home-mail opc-hidden">
-            <span>corepper03@gmail.com</span>
-          </div>
-        </div>
-        <div class="skills opc-hidden add--trans">
-          <div class="skills-title">
-            <i class="fas fa-skull header--logo"></i><span>Skills</span>
-          </div>
-          <div class="skills-content">
-            <div class="skills-header">
-              <i class="fas fa-meteor"></i><span>Some Skill</span>
-            </div>
-            <div class="skill skill--1">
-              <p class="skill-name">Qwert</p>
-              <p class="skill-number" data-number="50%">0</p>
-            </div>
-            <div class="skill skill--2">
-              <p class="skill-name">Toxic</p>
-              <p class="skill-number" data-number="60%">60%</p>
-            </div>
-            <div class="skill skill--3">
-              <p class="skill-name">Penis size</p>
-              <p class="skill-number" data-number="90%">0</p>
-            </div>
-            <div class="skill skill--4">
-              <p class="skill-name">Tung chình</p>
-              <p class="skill-number" data-number="95%">0</p>
-            </div>
-            <div class="skills-header">
-              <i class="fas fa-code code--skill"></i> <span>Code </span>
-            </div>
-            <div class="skill skill--1">
-              <p class="skill-name">HTML5</p>
-              <p class="skill-number" data-number="80%">0</p>
-            </div>
-            <div class="skill skill--2">
-              <p class="skill-name">CSS3</p>
-              <p class="skill-number" data-number="60%">0</p>
-            </div>
-            <div class="skill skill--3">
-              <p class="skill-name">Javascript</p>
-              <p class="skill-number" data-number="40%">0</p>
-            </div>
-            <div class="skill skill--4">
-              <p class="skill-name">NodeJS</p>
-              <p class="skill-number" data-number="10%">0</p>
-            </div>
-          </div>
-        </div>
-        <div class="resume add--trans opc-hidden">
-          <div class="resume-title">
-            <i class="fas fa-skull header--logo"></i><span>Resume</span>
-          </div>
-          <div class="resume-content">
-            <h1>coming Soon</h1>
-          </div>
-        </div>
-        <div class="playlists add--trans opc-hidden">
-          <div class="resume-title">
-            <i class="fas fa-music header--logo"></i><span>Playlist</span>
-          </div>
-          <div class="play-container">
-            <div class="play">
-              <div class="play-slider">
-                <div class="play-color"></div>
-              </div>
-              <div class="play-header">
-                <p>Name Song</p>
-              </div>
+            <div class="play-lists">
               <div class="play-controls">
-                <i class="fas fa-fast-backward play--icon back--song"></i>
-                <i class="fas fa-play play--icon start"></i>
-                <i class="fas fa-pause pause--icon"></i>
-                <i class="fas fa-fast-forward play--icon next--song"></i>
+                <div class="play-info">
+                  <p></p>
+                  <div class="play-img"></div>
+                  <span>Name</span>
+                </div>
+                <input
+                  type="range"
+                  class="slider"
+                  name="rage"
+                  id=""
+                  min="0"
+                  max="100"
+                  step="1"
+                  value="0"
+                />
+                <div class="play-controls-btn">
+                  <i class="fas fa-fast-backward play--back"></i>
+                  <i class="fas fa-pause-circle play--pause"></i>
+                  <i class="fas fa-play-circle play--play"></i>
+                  <i class="fas fa-fast-forward play--next"></i>
+                </div>
               </div>
+              <div class="play-list-song">
+                <div class="song">
+                  <div class="song-avt"></div>
+                  <div class="song-info">
+                    <h1>song name</h1>
+                    <span>author</span>
+                  </div>
+                </div>
+              </div>
+              <audio src="assets/audio/" class="audio"></audio>
             </div>
-            <div class="play-list"></div>
           </div>
-        </div>
-        <div class="audio-container">
-          <!-- <audio src="./assets/audio/yeuxa.mp3" data-number="0"></audio>
-          <audio src="./assets/audio/henmotmai.mp3" data-number="0"></audio> -->
         </div>
       </div>
     </div>
