--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -117,7 +117,14 @@
         </div>
       </section>
       <section class="code hidden">
-        <h1>comingsoon</h1>
+        <div class="news-tag">
+          <h1>Coder project</h1>
+        </div>
+        <div class="code-content">
+            <div class="div">
+              <p>Coming soon</p>
+            </div>
+          </div>
       </section>
     </div>
     <script src="./assets/music.js"></script>
