--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
   />
   <link
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./assets/music.css">
     <link rel="stylesheet" href="./assets/app.css" />
     <title>Info</title>
@@ -37,7 +37,7 @@
           <!-- this is home info -->
           </div>
         <div class="home-tag">
-          
+          <!-- this is home tag -->
         </div>
       </section>
       <section class="user hidden">
