--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -15,6 +15,9 @@
     <title>Info</title>
   </head>
   <body>
+    <section class="loader">
+      <i class="fas fa-fan loader--icon"></i>
+    </section>
     <div id="main">
       <section class="header">
         <div class="header-list-icon">
