--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -32,7 +32,7 @@
       <i class="fas fa-code icon--code"></i>
     </div>
       </section>
-      <section class="home active">
+      <section class="home hidden">
         <div class="home-avt">
           <img src="./assets/imgs/image.jpg" alt="">
         </div>
@@ -119,14 +119,37 @@
           </div>
         </div>
       </section>
-      <section class="code hidden">
+      <section class="code active">
         <div class="news-tag">
           <h1>Coder project</h1>
         </div>
         <div class="code-content">
-            <div class="div">
-              <p>Coming soon</p>
-            </div>
+           <!--  <div class="code-project">
+              <p><i class="fas fa-heart code--icon"></i>love
+              <div class="code-nav">
+                <i class="fas fa-angle-down nav-down"></i>
+                <i class="fas fa-angle-up nav-up hidden"></i>
+              </div>
+              </p> -->
+             <ul class="code-project">
+              
+               <li class="project-in-code">
+                <div class="project-content">
+                   <p><i class="fas fa-heart code--icon"></i>love
+             <div class="code-nav">
+               <i class="fas fa-angle-down nav-down"></i>
+               <i class="fas fa-angle-up nav-up hidden"></i>
+             </div>
+                </div>
+                <ul class="project-sub">
+                  <li>
+                    <img src="./assets/imgs/image2.jpg" alt="">
+                    <h2>This is heading</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste autem vitae dolor numquam quis doloremque laudantium officia! Ipsa, nostrum nobis itaque iusto quidem quis omnis minima assumenda quo quae iste.</p>
+                  </li>
+                </ul>
+              </li>
+             </ul>
           </div>
       </section>
     </div>
