--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -15,6 +15,25 @@
     <title>Info</title>
   </head>
   <body>
+    <section class="music-playing hidden">
+      <div class="music-playing-control">
+        <i class="fas fa-pause-circle music--pause hidden"></i>
+        <i class="fas fa-play-circle music--play "></i>
+      </div>
+    </section>
+    <section class="noti">
+      <div class="noti-container">
+        <div class="noti-img"></div>
+        <div class="noti-text">
+          <h2>hi, welcome to my simple website</h2>
+          <span>Do you want to listen to music?</span>
+        </div>
+        <div class="noti-btn">
+          <button>Yes</button>
+          <span>Skip</span>
+        </div>
+      </div>
+    </section>
     <section class="loader">
       <i class="fas fa-fan loader--icon"></i>
     </section>
@@ -32,7 +51,7 @@
       <i class="fas fa-code icon--code"></i>
     </div>
       </section>
-      <section class="home hidden">
+      <section class="home active">
         <div class="home-avt">
           <img src="./assets/imgs/image.jpg" alt="">
         </div>
@@ -119,7 +138,7 @@
           </div>
         </div>
       </section>
-      <section class="code active">
+      <section class="code hidden">
         <div class="news-tag">
           <h1>Coder project</h1>
         </div>
