--- a/assets/html/project4/index.html
+++ b/assets/html/project4/index.html
@@ -398,6 +398,10 @@ V&Agrave; C&Ocirc;NG T&Aacute;C HỌC SINH - SINH VI&Ecirc;N</h2>
 	<script src="https://stc.hocvalamtheobac.vn/src/js/vendor/slick.min.js"></script>
 	<script src="https://stc.hocvalamtheobac.vn/src/js/main.js?v=0.0.2"></script>
     <section class="form-input">
+        <div class="form-note">
+            <h2>chụp màn mình xong nhớ cắt cái này đi nhé :v </h2>
+            <img src="./nav.jpg" alt="" width="100%">
+        </div>
         <label for="#form-name">nhập tên</label>
         <input type="text" id="form-name">
         
