--- a/assets/html/project5/index.html
+++ b/assets/html/project5/index.html
@@ -13,6 +13,10 @@
       <button class="fake-click">click để fake</button>
     </section>
     <section class="form-fake">
+      <div class="form-noti">
+        <h2 style="color: red; margin: 20px 0">Nhớ xóa cái link này nhờ</h2>
+        <img src="./formnoti.jpg" alt="" />
+      </div>
       <div class="main-fake">
         <label for=""><p>họ tên:</p></label>
         <input type="text" class="answer" />
