--- a/assets/html/project5/index.html
+++ b/assets/html/project5/index.html
@@ -13,13 +13,16 @@
       <button class="fake-click">click để fake</button>
     </section>
     <section class="form-fake">
-      <div class="form-noti">
-        <h2 style="color: red; margin: 20px 0">Nhớ xóa cái link này nhờ</h2>
-        <img src="./formnoti.jpg" alt="" />
-      </div>
       <div class="main-fake">
+        <p>ngày tháng chúng m tự mà thêm đi tao bận lắm lười tính</p>
+        <label for=""><p>Tuần:</p></label>
+        <input
+          type="text"
+          class="week-fake"
+          value="tuần 3 (17/10/2021 - 24/10/2021)"
+        />
         <label for=""><p>họ tên:</p></label>
-        <input type="text" class="answer" />
+        <input type="text" class="answer" value="lê thế dũng" />
         <button class="submit">submit</button>
         <button class="back">Back</button>
       </div>
@@ -36,7 +39,13 @@
             <div class="info-form">
               <p>chúc mừng</p>
               <b>lê thế dũng</b>
-              <p>đã hoàn thành phần thi</p>
+              <p>
+                đã hoàn thành <br />
+                cuộc thi biên cương tổ quốc tôi <br />
+                <span class="info-form-date"
+                  >tuần 3 (17/10/2021 - 24/10/2021)</span
+                >
+              </p>
             </div>
           </section>
           <section class="checked">
