--- a/assets/html/mobile.html
+++ b/assets/html/mobile.html
@@ -26,7 +26,7 @@
         <div class="noti-img"></div>
         <div class="noti-text">
           <h2>hi, welcome to my simple website</h2>
-          <span>Do you want to listen to music?, <br> nhấn skip để chuyển qua TNVN Fake</span>
+          <span>Do you want to listen to music?</span>
         </div>
         <div class="noti-btn">
           <button>Yes</button>
